WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151916
Bad position of large operators inside an munderover element
https://bugs.webkit.org/show_bug.cgi?id=151916
Summary
Bad position of large operators inside an munderover element
Frédéric Wang Nélar
Reported
2015-12-05 09:22:02 PST
Created
attachment 266716
[details]
testcase See the attached testcase. The large operator (black square) has height 0 and so the scripts (red and green bars) are badly placed. I think it's a regression, as it used to work when I implemented largeop support.
Attachments
testcase
(2.31 KB, text/html)
2015-12-05 09:22 PST
,
Frédéric Wang Nélar
no flags
Details
Screenshot of the testcase in gecko
(368 bytes, image/png)
2015-12-05 09:23 PST
,
Frédéric Wang Nélar
no flags
Details
Screenshot in current webkit nightly & release
(309 bytes, image/png)
2015-12-05 09:34 PST
,
Frédéric Wang Nélar
no flags
Details
Patch adding a test for this bug
(2.70 KB, patch)
2015-12-05 09:34 PST
,
Frédéric Wang Nélar
no flags
Details
Formatted Diff
Diff
Patch
(6.39 KB, patch)
2015-12-09 03:16 PST
,
Frédéric Wang Nélar
alex
: review+
alex
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Frédéric Wang Nélar
Comment 1
2015-12-05 09:23:30 PST
Created
attachment 266717
[details]
Screenshot of the testcase in gecko
Frédéric Wang Nélar
Comment 2
2015-12-05 09:34:03 PST
Created
attachment 266718
[details]
Screenshot in current webkit nightly & release
Frédéric Wang Nélar
Comment 3
2015-12-05 09:34:49 PST
Created
attachment 266719
[details]
Patch adding a test for this bug
Frédéric Wang Nélar
Comment 4
2015-12-09 03:16:20 PST
Created
attachment 266984
[details]
Patch
Frédéric Wang Nélar
Comment 5
2015-12-09 06:46:43 PST
Committed
r193829
: <
http://trac.webkit.org/changeset/193829
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug