Source/WebCore/rendering/mathml/RenderMathMLOperator.h
@@ -71,6 +71,7 @@ public:
     bool hasOperatorFlag(MathMLOperatorDictionary::Flag flag) const { return m_operatorFlags & flag; }
     // FIXME: The displaystyle property is not implemented (https://bugs.webkit.org/show_bug.cgi?id=118737).
     bool isLargeOperatorInDisplayStyle() const { return !hasOperatorFlag(MathMLOperatorDictionary::Stretchy) && hasOperatorFlag(MathMLOperatorDictionary::LargeOp); }
+    bool isVertical() const { return m_isVertical; }
 
     virtual void updateStyle() override final;
 
